# quantrs

./: .gitignore  CHANGELOG.md  Cargo.lock.MSRV  Cargo.toml  LICENSE  LICENSE-MIT.md  LICENSE.md  OUTLOOK.md  README outlook.md  README-py.md  README.md  codecov.yml  pyproject.toml  test.md
.github/: dependabot.yml
.github/workflows/: ci.yml  coverage.yml
benches/: option_pricing_bench.rs
bindings/python/: README.md
bindings/python/examples/: basic_usage.py  pandas_integration.py
bindings/python/tests/: fixed_income.py  test_fixed_income.py
examples/: black_scholes.rs  data.rs  data_processes.rs  fixed_income.rs  options_pricing.rs  portfolio_optimization.rs
examples/data/: ETFprices.csv
microquant/: Cargo.lock.MSRV  Cargo.toml
microquant/src/: data.rs  lib.rs  options.rs  timeseries.rs
microquant/src/options/: black_scholes.rs
src/: data.rs  fixed_income.rs  lib.rs  options.rs  portfolio.rs  python.rs
src/data/: data_models.rs  data_provider.rs  traits.rs  types.rs
src/data/data_provider/: alpha_vantage.rs  massive.rs  yahoo_finance.rs
src/data/traits/: data_source.rs  stock_source.rs  stocks_source.rs
src/fixed_income/: bond_pricing.rs  bonds.rs  day_count.rs  types.rs
src/fixed_income/bonds/: corporate.rs  zero_coupon.rs
src/fixed_income/traits/: day_count.rs
src/macros/: math_macros.rs
src/options/: binomial_tree.rs  black_scholes.rs  greeks.rs  instrument.rs  models.rs  monte_carlo.rs  types.rs
src/options/models/: binomial_tree.rs  black_76.rs  black_scholes.rs  finite_diff.rs  heston.rs  monte_carlo.rs
src/options/traits/: option.rs  option_strategy.rs
src/options/types/: american_option.rs  asian_option.rs  barrier_option.rs  bermudan_option.rs  binary_option.rs  european_option.rs  lookback_option.rs  rainbow_option.rs
src/portfolio/: mean_variance.rs
src/python/: fixed_income.rs
tests/: data.rs  fixed_income.rs  options_pricing.rs  placeholder.rs
