[package]
name = "quantrs"
version = "0.1.0"
authors = ["Carlo Bortolan"]
description = " A tiny Rust library for quantitative finance"
license = "MIT"
# keywords = ["quantitative", "statistics", "finance", "options", "timeseries"]
# categories = ["science"]
homepage = "https://github.com/carlobortolan/quantrs"
repository = "https://github.com/carlobortolan/quantrs"
edition = "2021"

include = ["CHANGELOG.md", "LICENSE.md", "src/", "tests/"]

# When changing MSRV: Also update the README
rust-version = "1.65.0"

[dependencies]
rand = "0.9.0"
rand_distr = "0.5.1"
statrs = "0.18.0"

[dev-dependencies]
approx = "0.4"

[lints.rust.unexpected_cfgs]
level = "warn"
# Set by cargo-llvm-cov when running on nightly
check-cfg = ['cfg(coverage_nightly)']

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
