[package]
name = "quantrs"
version = "0.1.4"
authors = ["Carlo Bortolan <carlobortolan@gmail.com>"]
description = " A tiny Rust library for quantitative finance"
license = "MIT"
# license = "MIT OR Apache-2.0"
# keywords = ["quantitative", "statistics", "finance", "options", "pricing"]
# categories = ["finance", "simulation", "mathematics"]
repository = "https://github.com/carlobortolan/quantrs"
documentation = "https://docs.rs/quantrs"
homepage = "https://github.com/carlobortolan/quantrs"
edition = "2021"

include = ["CHANGELOG.md", "LICENSE.md", "src/", "tests/"]

# When changing MSRV: Also update the README
rust-version = "1.65.0"

[dependencies]
rand = "0.9.0"
rand_distr = "0.5.1"
rayon = "1.10.0"
statrs = "0.18.0"

[dev-dependencies]
approx = "0.5.1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "option_pricing_bench"
harness = false

[lints.rust.unexpected_cfgs]
level = "warn"
# Set by cargo-llvm-cov when running on nightly
check-cfg = ['cfg(coverage_nightly)']

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
